--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -70,7 +70,11 @@
 
 		<!-- your content goes here... -->
 		<div class="main_content">
-		<!-- InstanceBeginEditable name="main_content" -->:P<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="main_content" -->
+		<p>Why am I working this hard on a diseased, flying rodent... I could be drawing five Mona Lisas with the amount of pixels this thing has... so far this is the largest sketch I've ever done... <br>
+	    <a href="media/blurbstuf/2025_01_11_holyfuck.png" target="_blank"><img src="media/blurbstuf/2025_01_11_holyfuck.png" alt="So many pixels!" width="81" height="251" border="0"></a></p>
+		<p>&nbsp; </p>
+		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
 		
