--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -84,6 +84,7 @@
 		<h1>Art-View</h1>
 		<div class="thumbs">
 		<!-- latest. ill add pages for them later but for now they link to the piece's image -->
+			<a href="../media/art/2025/01_Jan/2025_01_12_h2dm/h2dm.pdf" target="_blank"><img src="../media/art/2025/01_Jan/2025_01_12_h2dm/h2dm_thumb.png" alt="Learning How to Draw From A Manga Book" width="128" height="128" class="thumb" title="Emil's initial design"></a>
 			<a href="../media/art/2025/01_Jan/2025_01_01_emil/emil_init_design.png" target="_blank"><img src="../media/art/2025/01_Jan/2025_01_01_emil/emil_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb"></a>
 			<a href="../media/art/2024/12_Dec/2024_12_ssketchbook/SSketchbook_02.pdf" target="_blank"><img src="../media/art/2024/12_Dec/2024_12_ssketchbook/SSketchbook_02_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb"></a>
 			<a href="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck.png" target="_blank"><img src="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck_thumb.png" alt="Drippy's Server Invite Banner" titke="Drippy's Server Invite Banner" class="thumb"></a>
