--- a/sitedir/downloads/index.html
+++ b/sitedir/downloads/index.html
@@ -31,7 +31,7 @@
 	<!-- InstanceBeginEditable name="restofthehead" -->
 	<style>
 	body {
-	background: #000;
+	background: #088;
 	}
 	</style>
 	<!-- InstanceEndEditable -->
@@ -63,14 +63,6 @@
 		</div>
 		<!--end header-->
 		</nav>
-
-		<hr>
-
-		<!-- under construction -->
-		<p align="center"><img src="/media/gifsfromgeocities/construction.gif" alt="This site is under construction. Come back often." class="pixelme"></p>
-		
-		<hr>
-
 		<main>
 		<div class="main">
 
@@ -79,6 +71,14 @@
 		<!-- InstanceBeginEditable name="main_content" -->
 		<h1>Downloads</h1>
 		<!--start em-->
+		<h2>Advertisements</h2>
+		<p>
+			Do you love being a shill? Do you love Aleph's Website? Well now you can get the best of both worlds and advertise this very website! Just use the images below and paste them all over your page, instagram or whatever the kids use these days! I don't care, I need the clicks!!<br>
+			<h3>Buttons</h3>
+			The first two essentially get the same point across: There's art, animations, games (...maybe) and more.<br>
+			<img src="ads/buttons/aleph8831.gif"> - Aleph's Website 88x31 Button<br>
+			<img src="ads/buttons/aleph8831_old.gif"> - Aleph's Website 88x31 Button Circa 2023
+		</p>
 		<h2>Wallpapers</h2>
 		<p>
 			<!-- blah guy thumbs up -->
