--- a/sitedir/downloads/index.html
+++ b/sitedir/downloads/index.html
@@ -74,6 +74,7 @@
 		<h2>Advertisements</h2>
 		<p>
 			Do you love being a shill? Do you love Aleph's Website? Well now you can get the best of both worlds and advertise this very website! Just use the images below and paste them all over your page, instagram or whatever the kids use these days! I don't care, I need the clicks!!<br>
+			Right click the images and press "Save Image As..." or whatever the equivalent is in your browser's context menu. Then use to your heart's content.<br>
 			<h3>Buttons</h3>
 			The first two essentially get the same point across: There's art, animations, games (...maybe) and more.<br>
 			<img src="ads/buttons/aleph8831.gif"> - Aleph's Website 88x31 Button<br>
