--- a/sitedir/downloads/index.html
+++ b/sitedir/downloads/index.html
@@ -92,6 +92,14 @@
 		</p>
 		<!-- InstanceEndEditable -->
 		</div>
+		<!-- your content dies here. -->
+		
+		<!-- sideabr -->
+		<div class="main_thebar">
+		<!-- InstanceBeginEditable name="main_thebar" -->
+			<p>Sample text. </p>
+		<!-- InstanceEndEditable -->
+		</div>
 		<!-- end sideabr -->
 
 		</div>
