--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -84,11 +84,17 @@
 		<h1>Art-View</h1>
 		<div class="thumbs">
 		<!-- latest. ill add pages for them later but for now they link to the piece's image -->
+		<h2>2025</h2>
+		<h3>January</h3>
 			<a href="../media/art/2025/01_Jan/2025_01_12_h2dm/h2dm.pdf" target="_blank"><img src="../media/art/2025/01_Jan/2025_01_12_h2dm/h2dm_thumb.png" alt="Learning How to Draw From A Manga Book" width="128" height="128" class="thumb" title="Emil's initial design"></a>
 			<a href="../media/art/2025/01_Jan/2025_01_01_emil/emil_init_design.png" target="_blank"><img src="../media/art/2025/01_Jan/2025_01_01_emil/emil_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb"></a>
+		<h2>2024</h2>
+		<h3>December</h3>
 			<a href="../media/art/2024/12_Dec/2024_12_ssketchbook/SSketchbook_02.pdf" target="_blank"><img src="../media/art/2024/12_Dec/2024_12_ssketchbook/SSketchbook_02_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb"></a>
 			<a href="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck.png" target="_blank"><img src="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck_thumb.png" alt="Drippy's Server Invite Banner" titke="Drippy's Server Invite Banner" class="thumb"></a>
+		<h3>November</h3>
 			<a href="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy.png" target="_blank"><img src="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy_thumb.png" alt="The Blah Guy Sketches of '24" title="The Blah Guy Sketches of '24" class="thumb"></a>
+		<h3>September</h3>
 			<a href="../media/art/2024/09_Sep/2024_09_24_conflict/conflict.png" target="_blank"><img src="../media/art/2024/09_Sep/2024_09_24_conflict/conflict_thumb.png" alt="ELA Literary Device Assignment" title="ELA Literary Device Assignment" class="thumb"></a>
 		<!-- oldest -->
 		</div>
@@ -99,7 +105,13 @@
 		<!-- sideabr -->
 		<div class="main_thebar">
 		<!-- InstanceBeginEditable name="main_thebar" -->
-			<p>I'm supposed to put something here? Really?</p>
+			<p>
+			<h4>Older pieces</h4>
+			<ul>
+				<li><a href="/archive/art/" target="_blank">Pieces in /archive/ &rarrhk;</a></li>
+				<li><a href="https://rrkt.rf.gd/art/" target="_blank">Pieces at http://rrkt.rf.gd &rarrhk;</a></li>
+			</ul>
+			</p>
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- end sideabr -->
