more shit, sherlock

--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -96,6 +96,10 @@
 			<a href="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy.png" target="_blank"><img src="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy_thumb.png" alt="The Blah Guy Sketches of '24" title="The Blah Guy Sketches of '24" class="thumb"></a>
 		<h3>September</h3>
 			<a href="../media/art/2024/09_Sep/2024_09_24_conflict/conflict.png" target="_blank"><img src="../media/art/2024/09_Sep/2024_09_24_conflict/conflict_thumb.png" alt="ELA Literary Device Assignment" title="ELA Literary Device Assignment" class="thumb"></a>
+		<h2>2023</h2>
+		<h3>Endless, Monthless, Dayless</h3>
+			<a href="../media/art/2023/boite_sketch_0001.jpg" target="_blank"><img src="../media/art/2023/boite_sketch_0001_thumb.png" alt="Only Boite Sketch of 2023" title="Only Boite Sketch of 2023" class="thumb"></a>
+			<a href="../media/art/2023/perspective.jpg" target="_blank"><img src="../media/art/2023/perspective_thumb.png" alt="Perspective Practice" title="Perspective Practice" class="thumb"></a>
 		<!-- oldest -->
 		</div>
 		<!-- InstanceEndEditable -->
@@ -106,10 +110,11 @@
 		<div class="main_thebar">
 		<!-- InstanceBeginEditable name="main_thebar" -->
 			<p>
+			I still don't have separate pages for them yet. Just wait.<br>
 			<h4>Older pieces</h4>
 			<ul>
 				<li><a href="/archive/art/" target="_blank">Pieces in /archive/ &rarrhk;</a></li>
-				<li><a href="https://rrkt.rf.gd/art/" target="_blank">Pieces at http://rrkt.rf.gd &rarrhk;</a></li>
+				<li><a href="http://rrkt.rf.gd/art/" target="_blank">Pieces at http://rrkt.rf.gd &rarrhk;</a></li>
 			</ul>
 			</p>
 		<!-- InstanceEndEditable -->
