--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -98,8 +98,10 @@
 			<a href="../media/art/2024/09_Sep/2024_09_24_conflict/conflict.png" target="_blank"><img src="../media/art/2024/09_Sep/2024_09_24_conflict/conflict_thumb.png" alt="ELA Literary Device Assignment" title="ELA Literary Device Assignment" class="thumb"></a>
 		<h2>2023</h2>
 		<h3>Endless, Monthless, Dayless</h3>
+		<p>This is why you date filenames and folders with your art, kids!</p>
 			<a href="../media/art/2023/boite_sketch_0001.jpg" target="_blank"><img src="../media/art/2023/boite_sketch_0001_thumb.png" alt="Only Boite Sketch of 2023" title="Only Boite Sketch of 2023" class="thumb"></a>
 			<a href="../media/art/2023/perspective.jpg" target="_blank"><img src="../media/art/2023/perspective_thumb.png" alt="Perspective Practice" title="Perspective Practice" class="thumb"></a>
+			<a href="../media/art/2023/stuart_0001.jpg" target="_blank"><img src="../media/art/2023/stuart_0001_thumb.png" alt="Stuart Character Art" title="Stuart Character Art" class="thumb"></a>
 		<!-- oldest -->
 		</div>
 		<!-- InstanceEndEditable -->
