just realized the naming scheme's wrong

--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Art-View // Aleph's Website</title>
+	<title>Art-View ::: Aleph's Website</title>
 	<!-- InstanceEndEditable -->
 
 	<!-- viewport for mobile devices -->
