forgot to update seo for chardata

--- a/sitedir/chardata/index.html
+++ b/sitedir/chardata/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>Home ::: Aleph's Website</title>
+	<title>Character Data ::: Aleph's Website</title>
 	<!-- InstanceEndEditable -->
 
 	<!-- viewport for mobile devices -->
@@ -11,9 +11,9 @@
 
 	<!-- seo stuff -->
 		<!-- InstanceBeginEditable name="SEOSTUF" -->
-			<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
+			<meta name="title" content="The many characters of Aleph Diallo">
 	
-			<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
+			<meta name="description" content="Every character by Aleph that he can name at the top of his head.">
 	
 			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
