--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -71,9 +71,7 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-		<p>Why am I working this hard on a diseased, flying rodent... I could be drawing five Mona Lisas with the amount of pixels this thing has... so far this is the largest sketch I've ever done... <br>
-	    <a href="media/blurbstuf/2025_01_11_holyfuck.png" target="_blank"><img src="media/blurbstuf/2025_01_11_holyfuck.png" alt="So many pixels!" width="81" height="251" border="0"></a></p>
-		<p>&nbsp; </p>
+		<p>There's something about this page... this is a page about something there...</p>
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
