--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -79,7 +79,13 @@
 		<!-- sideabr -->
 		<div class="main_thebar">
 		<!-- InstanceBeginEditable name="main_thebar" -->
-			<p>Sample text. </p>
+			<!--relmeauth!-->
+			<h4>Socials!</h4>
+			<ul>
+  				<li><a href="https://github.com/rubberocket" rel="me">@rubberocket on Github</a></li>
+  				<li><a href="https://x.com/rubberocket" rel="me">Twitter</a> (super inactive, don't come here)</li>
+  				<li><a href="mailto:aleph@rubberocket.com" rel="me">aleph@rubberocket.com</a></li>
+			</ul>
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- end sideabr -->
