roblox shirts pants

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -81,10 +81,12 @@
 		<!-- InstanceBeginEditable name="main_thebar" -->
 			<!--relmeauth!-->
 			<h4>Socials!</h4>
-			<ul>
-  				<li><a href="https://github.com/rubberocket" rel="me">@rubberocket on Github</a></li>
-  				<li><a href="https://x.com/rubberocket" rel="me">Twitter</a> (super inactive, don't come here)</li>
-  				<li><a href="mailto:aleph@rubberocket.com" rel="me">aleph@rubberocket.com</a></li>
+			<p>
+				<a href="https://github.com/rubberocket" rel="me">@rubberocket on Github</a><br>
+  				<a href="https://x.com/rubberocket" rel="me">Twitter</a> (super inactive, don't come here)<br>
+  				<a href="https://youtube.com/@rubberocket" rel="me">Youtube</a> (currently inactive)<br>
+  				<a href="mailto:aleph@rubberocket.com" rel="me">aleph@rubberocket.com</a>
+  			</p>
 			</ul>
 		<!-- InstanceEndEditable -->
 		</div>
