--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -71,7 +71,15 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-		<h1>Where am I?	      </h1>
+		<!--<h1>obligatory generic h-card</h1>-->
+		<p>
+			<div class="h-card" style="display: none;">
+ 				<a class="p-name u-url"
+					href="https://rubberocket.com/" 
+				>Aleph Diallo</a>
+			</div>
+		</p>
+		<h1>Where am I?</h1>
 		<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
 		<h1>Who are you?</h1>
 		<p>I'm Aleph Diallo. I like drawing.</p>
