--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -74,9 +74,11 @@
 		<!--<h1>obligatory generic h-card</h1>-->
 		<p>
 			<div class="h-card" style="display: none;">
+				<img class="u-photo" src="https://rubberocket.com/media/pagespecific/about/me.png">
  				<a class="p-name u-url"
 					href="https://rubberocket.com/" 
 				>Aleph Diallo</a>
+				<p class="p-note">Yet another guy who draws.</p>
 			</div>
 		</p>
 		<h1>Where am I?</h1>
