--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -72,6 +72,14 @@
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
 		<p>There's something about this page... this is a page about something there...</p>
+		<!--this should NOT be visible...-->
+		<div class="h-card" style="display: none;">
+				<img class="u-photo" src="https://rubberocket.com/media/pagespecific/about/me.png">
+ 				<a class="p-name u-url" rel="me"
+					href="https://rubberocket.com/" 
+				>Aleph Diallo</a>
+				<p class="p-note">Yet another guy who draws. Neat!</p>
+		</div>
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
