--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -71,6 +71,13 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
+		<h1 class="p-name">The about section</h1>
+		<!--metadata-->
+		<div style="display: none;">
+			<span class="dt-published">2024/12/31</span>
+			<span class="dt-updated">2025/01/14</span>
+		</div>
+		<div class="e-content">
 		<h1>Where am I?</h1>
 		<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
 		<h1>Who are you?</h1>
@@ -86,6 +93,7 @@
 		<p><a href="stuffiuse.html">Here's a list.</a> </p>
 		<h1>Anything else?</h1>
 		<p>Yeah. Don't do drugs. </p>
+		</div>
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
