--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -71,7 +71,9 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
+		<div class="e-content">
 		<p>There's something about this page... this is a page about something there...</p>
+		</div>
 		<!--this should NOT be visible...-->
 		<div class="h-card" style="display: none;">
 				<img class="u-photo" src="https://rubberocket.com/media/pagespecific/about/me.png">
