--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -71,28 +71,30 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-		<h1 class="p-name">The about section</h1>
-		<!--metadata-->
-		<div style="display: none;">
-			<span class="dt-published">2024/12/31</span>
-			<span class="dt-updated">2025/01/14</span>
-		</div>
-		<div class="e-content">
-		<h1>Where am I?</h1>
-		<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
-		<h1>Who are you?</h1>
-		<p>I'm Aleph Diallo. I like drawing.</p>
-		<h1>Where can I contact you?</h1>
-		<p>The best way to contact me is through email:</p>
-		<p>aleph at rubberocket dot com</p>
-		<h1>Why did you make Aleph's Website?</h1>
-		<p>First, it was boredom. Then, it was so that I could show what I've done over the years to the public, no matter how bad it would be.</p>
-		<h1>What do you like?</h1>
-		<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
-		<h1>What do you use to get stuff done?</h1>
-		<p><a href="stuffiuse.html">Here's a list.</a> </p>
-		<h1>Anything else?</h1>
-		<p>Yeah. Don't do drugs. </p>
+		<article class="h-entry">
+			<h1 class="p-name">The about section</h1>
+			<!--metadata-->
+			<div style="display: none;">
+				<span class="dt-published">2024/12/31</span>
+				<span class="dt-updated">2025/01/14</span>
+			</div>
+			<div class="e-content">
+				<h1>Where am I?</h1>
+					<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
+				<h1>Who are you?</h1>
+					<p>I'm Aleph Diallo. I like drawing.</p>
+				<h1>Where can I contact you?</h1>
+					<p>The best way to contact me is through email:</p>
+					<p>aleph at rubberocket dot com</p>
+				<h1>Why did you make Aleph's Website?</h1>
+					<p>First, it was boredom. Then, it was so that I could show what I've done over the years to the public, no matter how bad it would be.</p>
+				<h1>What do you like?</h1>
+					<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
+				<h1>What do you use to get stuff done?</h1>
+					<p><a href="stuffiuse.html">Here's a list.</a> </p>
+				<h1>Anything else?</h1>
+					<p>Yeah. Don't do drugs. </p>
+		</article>
 		</div>
 		<!-- InstanceEndEditable -->
 		</div>
