--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -77,6 +77,7 @@
 			<div style="display: none;">
 				<span class="dt-published">2024/12/31</span>
 				<span class="dt-updated">2025/01/14</span>
+				<a rel="author" class="p-author h-card" href="https://rubberocket.com">Aleph Diallo</a>
 			</div>
 			<div class="e-content">
 				<h1>Where am I?</h1>
