--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -15,7 +15,7 @@
 	
 			<meta name="description" content="A bunch of stuff (depending on how you view the word bunch) about the webmaster of this very site, Aleph Diallo.">
 	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+			<meta name="keywords" content="badbunsen.com, BadBunsen, Bad Bunsen, rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
 			<meta name="robots" content="index, follow">
 	
@@ -77,7 +77,7 @@
 			<div style="display: none;">
 				<span class="dt-published">2024/12/31</span>
 				<span class="dt-updated">2025/01/14</span>
-				<a rel="author" class="p-author h-card" href="https://rubberocket.com">Aleph Diallo</a>
+				<a rel="author" class="p-author h-card" href="https://badbunsen.com">Aleph Diallo</a>
 			</div>
 			<div class="e-content">
 				<h1>Where am I?</h1>
