--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -15,7 +15,7 @@
 	
 			<meta name="description" content="Art-View: The art of Aleph Diallo, all ACCESSIBLE FROM one page. I didn't say all IN one page, I said accessible from. Two different things.">
 	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+			<meta name="keywords" content="badbunsen.com, BadBunsen, Bad Bunsen, rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
 			<meta name="robots" content="index, follow">
 	
