--- a/sitedir/downloads/index.html
+++ b/sitedir/downloads/index.html
@@ -13,7 +13,7 @@
 	
 			<meta name="description" content="Wallpapers, doohickeys, thingamabobs, name a type of downloadable file from a typical 90's website and there's a 25% chance we've got it!">
 	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+			<meta name="keywords" content="badbunsen.com, BadBunsen, Bad Bunsen, rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
 			<meta name="robots" content="index, follow">
 	
