--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -74,9 +74,9 @@
 		<p>Might rename the site's URL to badbunsen.com. Otherwise expect nothing.</p>
 		<!--this should NOT be visible...-->
 		<div class="h-card" style="display: none;">
-				<img class="u-photo" src="https://rubberocket.com/media/pagespecific/about/me.png">
+				<img class="u-photo" src="https://badbunsen.com/media/pagespecific/about/me.png">
  				<a class="p-name u-url" rel="me"
-					href="https://rubberocket.com/" 
+					href="https://badbunsen.com/" 
 				>Aleph Diallo</a>
 				<p class="p-note">Yet another guy who draws. Neat!</p>
 		</div>
@@ -92,8 +92,8 @@
 			<p>
 				<a href="https://github.com/rubberocket" rel="me">@rubberocket on Github</a><br>
   				<a href="https://x.com/rubberocket" rel="me">Twitter</a> (super inactive, don't come here)<br>
-  				<a href="https://youtube.com/@rubberocket" rel="me">Youtube</a> (currently inactive)<br>
-  				<a href="mailto:aleph@rubberocket.com" rel="me">aleph@rubberocket.com</a>
+  				<a href="https://youtube.com/@badbunsen" rel="me">Youtube</a> (currently inactive)<br>
+  				<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
   			</p>
 			</ul>
 		<!-- InstanceEndEditable -->
