--- a/sitedir/about/stuffiuse.html
+++ b/sitedir/about/stuffiuse.html
@@ -15,7 +15,7 @@
 	
 			<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
 	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+			<meta name="keywords" content="badbunsen.com, BadBunsen, Bad Bunsen, rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
 			<meta name="robots" content="index, follow">
 	
