--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -71,7 +71,7 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-		<p>Might rename the site's URL to badbunsen.com. Otherwise expect nothing.</p>
+		<p>Renamed the site's URL to badbunsen.com. Otherwise still expect nothing.</p>
 		<!--this should NOT be visible...-->
 		<div class="h-card" style="display: none;">
 				<img class="u-photo" src="https://badbunsen.com/media/pagespecific/about/me.png">
