--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -93,6 +93,8 @@
 					<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
 				<h1>What do you use to get stuff done?</h1>
 					<p><a href="stuffiuse.html">Here's a list.</a> </p>
+				<h1>Why the change to badbunsen?</h1>
+				<p>It's the oldest username I have, I set it as my Discord username and rubberocket is hard to get people to go to. I'll give you a hint: it has to do with how it's spelt!</p>
 				<h1>Anything else?</h1>
 					<p>Yeah. Don't do drugs. </p>
 			</div>
