--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -90,8 +90,8 @@
 			<!--relmeauth!-->
 			<h4>Socials!</h4>
 			<p>
-				<a href="https://github.com/badbunsen" rel="me">@rubberocket on Github</a><br>
-  				<a href="https://x.com/badbunsen" rel="me">Twitter</a> (super inactive, don't come here)<br>
+				<a href="https://github.com/badbunsen" rel="me">@BADBUNSEN on Github</a><br>
+  				<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a> (super inactive, don't come here)<br>
   				<a href="https://youtube.com/@badbunsen" rel="me">Youtube</a> (currently inactive)<br>
   				<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
   			</p>
