--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -81,7 +81,7 @@
 			</div>
 			<div class="e-content">
 				<h1>Where am I?</h1>
-					<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
+					<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a>, but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
 				<h1>Who are you?</h1>
 					<p>I'm Aleph Diallo. I like drawing.</p>
 				<h1>Where can I contact you?</h1>
