--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -74,7 +74,7 @@
 		<article class="h-entry">
 			<h1 class="p-name">The about section</h1>
 			<!--metadata-->
-			<div style="display: none;">
+			<div class="h_indieweb_metadata">
 				<span class="dt-published">2024/12/31</span>
 				<span class="dt-updated">2025/01/14</span>
 				<a rel="author" class="p-author h-card" href="https://badbunsen.com">Aleph Diallo</a>
@@ -92,7 +92,7 @@
 				<h1>What do you like?</h1>
 					<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
 				<h1>What do you use to get stuff done?</h1>
-					<p><a href="stuffiuse.html">Here's a list.</a> </p>
+					<p><a href="stuffiuse.html">Here's a list.</a> (This now redirects to a Google Doc)</p>
 				<h1>Why the change to badbunsen?</h1>
 				<p>It's the oldest username I have, I set it as my Discord username and rubberocket is hard to get people to go to. I'll give you a hint: it has to do with how it's spelt!</p>
 				<h1>Anything else?</h1>
