fuck it's wrong a little

--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -84,19 +84,20 @@
 					<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a>, but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
 				<h1>Who are you?</h1>
 					<p>I'm Aleph Diallo. I like drawing.</p>
-				<h1>Where can I contact you?</h1>
-					<p>The best way to contact me is through email:</p>
-					<p>aleph at rubberocket dot com</p>
+				<h1>What do you use to get stuff done?</h1>
+					<p><a href="stuffiuse.html">Here's a list.</a> (This now redirects to a Google Doc)</p>
 				<h1>Why did you make Aleph's Website?</h1>
 					<p>First, it was boredom. Then, it was so that I could show what I've done over the years to the public, no matter how bad it would be.</p>
 				<h1>What do you like?</h1>
 					<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
-				<h1>What do you use to get stuff done?</h1>
-					<p><a href="stuffiuse.html">Here's a list.</a> (This now redirects to a Google Doc)</p>
 				<h1>Why the change to badbunsen?</h1>
 				<p>It's the oldest username I have, I set it as my Discord username and rubberocket is hard to get people to go to. I'll give you a hint: it has to do with how it's spelt!</p>
+				<h1>Where can I contact you?</h1>
+					<p>The best way to contact me is through email:</p>
+					<p>aleph at badbunsen dot com</p>
+					<p>There's also my Discord! Feel free to contact me about anything: badbunsen</p>
 				<h1>Anything else?</h1>
-					<p>Yeah. Don't do drugs. </p>
+					<p>Yeah. Don't do drugs.</p>
 			</div>
 		</article>
 		
