--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -71,9 +71,10 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-		<p><a href="https://www.reuters.com/technology/tiktok-preparing-us-shut-off-sunday-information-reports-2025-01-15/" target="_blank">Apparently TikTok might go under in only three days*...</a> if you create content on TikTok, hope to god that you archived it all. Or you can start archiving right now. Your choice.<br><small>* - no, i'm not updating the days left, not even with javascript.</small></p>
-		<p>I also finished a drawing just recently with a lightbox, drafting tape, two pieces of paper, some Col-Erase pencils and a couple of Micron pens, with color done in Inkscape. Here's the end result. It's meant for a new, smaller banner for this website, so that's why it says "Formerly Rubberocket!".</p>
-		<p><img src="media/art/2025/01_Jan/2025_01_15_blahformer/colorized_lq.png" width="320" alt="Blah Guy saying 'Formerly Rubberocket' while pointing to the speech bubble"></p>
+		<p>
+		<marquee>In other news, animation is hard, inking is much easier and I just wanna get on with my life.</marquee>
+		</p>
+		<p>What to write, what to write...</p>
 		<!--this should NOT be visible...-->
 		<div class="h-card">
 				<img class="u-photo" src="https://badbunsen.com/media/pagespecific/about/me.png">
