--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -61,10 +61,11 @@
 		
 		<div class="header_links">NAV: <a href="/">HOME</a> <a href="/art/">ART</a> <a href="/archive/videos/">VIDEOS</a> <a href="/games/"></a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
 		<!-- cool line-->
-		<img src="media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
+		<img src="../media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme" alt="Rainbow line... I am mandated by the ADA to put this useless alt tag here">
 		</div>
 		<!--end header-->
 		</nav>
+
 		<main>
 		<div class="main">
 
